# invrm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
scripts/: GetPluginHostPID.ps1  RunPluginHost.ps1
source/: CMakeLists.txt
source/gui/: PluginEditor.cpp  PluginEditor.h  WaveformDisplay.h  vubar.cpp  vubar.h
source/proc/: Modulator.cpp  Modulator.h  PluginProcessor.cpp  PluginProcessor.h  WaveformBuffer.h
source/util/: CoreTimer.cpp  CoreTimer.h  Logger.cpp  Logger.h  Parameters.h  Singleton.h
tests/: CMakeLists.txt  TestRunner.cc
